--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Music Stream Bot",
+  "name": "Music Player",
   "description": "Bot to play songs in Telegram group voice chats. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
   "logo": "https://telegra.ph/file/4c03ff6d25fc678a2fe08.jpg",
